--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "typescript": "^5.3.0"
   },
   "dependencies": {
+    "@google/genai": "^1.37.0",
+    "dotenv": "^17.2.3",
     "tree-sitter": "^0.25.0",
     "tree-sitter-java": "^0.23.5",
     "tree-sitter-javascript": "^0.25.0",
