updated new welcome screen

--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
       {
         "command": "codeFlowVisualizer.analyzeWorkspace",
         "title": "Code Flow: Analyze Entire Workspace"
+      },
+      {
+        "command": "codeFlowVisualizer.resetWelcome",
+        "title": "Code Flow: Reset Welcome Screen"
       }
     ],
     "keybindings": [
