--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Visualize code structure and function call relationships in real-time",
   "version": "0.0.1",
   "icon":"CodeFlowIcon.png",
-  "publish": "codeflowio",
+  "publisher": "codeflowio",
   "galleryBanner.color": {
     "color": "21214c",
     "theme": "dark"
