--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "code-flow-visualizer",
   "displayName": "Code Flow Visualizer",
   "description": "Visualize code structure and function call relationships in real-time",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "icon": "CodeFlowIcon.png",
   "publisher": "codeflowio",
   "galleryBanner.color": {
@@ -75,12 +75,12 @@
   "dependencies": {
     "@google/genai": "^1.37.0",
     "dotenv": "^17.2.3",
+    "node-gyp-build": "^4.8.4",
     "tree-sitter": "^0.25.0",
     "tree-sitter-java": "^0.23.5",
     "tree-sitter-javascript": "^0.25.0",
     "tree-sitter-python": "^0.25.0"
   },
-
   "overrides": {
     "tree-sitter-java": {
       "tree-sitter": "$tree-sitter"
